--- a/CsvLoader3/Views/Files/Upload.cshtml
+++ b/CsvLoader3/Views/Files/Upload.cshtml
@@ -33,13 +33,23 @@
                 </tr>
             </thead>
             <tbody>
-                @foreach (var row in Model)
+            @if (Model.Count > 0)
+            {
+                foreach (var row in Model)
                 {
                     <tr>
                         <td>@row.FileName</td>
                         <td>@row.Header</td>
                     </tr>
                 }
+            }
+            else
+            {
+                <tr>
+                    <td>No data</td>
+                    <td>No data</td>
+                </tr>
+            }
             </tbody>
         </table>
     }
