--- a/CsvLoader3/Views/Files/Upload.cshtml
+++ b/CsvLoader3/Views/Files/Upload.cshtml
@@ -65,14 +65,39 @@
                 var fullPath = document.getElementById('uploadFile').value;
                 var filename = fullPath.split('\\').pop().split('/').pop();
                 var substring = ".csv";
-
-                if (filename.includes(substring)) {
+               // var cookie = getCookie("TestCookie");
+                if (filename.includes(substring)){//} && cookie!=null) {
                     UploadFile($('#uploadFile')[0].files);
                 }
             }
         );
 
         });
+
+
+
+        //function getCookie(name) {
+        //    var dc = document.cookie;
+        //    var prefix = name + "=";
+        //    var begin = dc.indexOf("; " + prefix);
+        //    if (begin == -1) {
+        //        begin = dc.indexOf(prefix);
+        //        if (begin != 0) return null;
+        //    }
+        //    else {
+        //        begin += 2;
+        //        var end = document.cookie.indexOf(";", begin);
+        //        if (end == -1) {
+        //            end = dc.length;
+        //        }
+        //    }
+        //    // because unescape has been deprecated, replaced with decodeURI
+        //    //return unescape(dc.substring(begin + prefix.length, end));
+        //    return decodeURI(dc.substring(begin + prefix.length, end));
+        //}
+
+
+
 
         function UploadFileChunk(Chunk, FileName) {
             var FD = new FormData();
